--- a/docs/tutorials/integrations/mcp-notion.mdx
+++ b/docs/tutorials/integrations/mcp-notion.mdx
@@ -373,7 +373,7 @@ LLMs cannot "browse" Notion like a human. For most actions, the model first need
 
 This integration supports a wide range of tools for searching, reading, creating, and updating Notion pages and databases.
 
-For a complete list of available tools, their schemas, and specific usage examples, please refer to the **[official Notion MCP documentation](https://developers.notion.com/docs/mcp-supported-tools)**.
+For a complete list of available tools, their descriptions, and specific usage examples, please refer to the **[official Notion MCP documentation](https://developers.notion.com/docs/mcp-supported-tools)**.
 
 ## Rate Limits
 Standard [API request limits](https://developers.notion.com/reference/request-limits) apply to your use of Notion MCP, totaled across all tool calls.
