--- a/docs/tutorials/integrations/mcp-notion.mdx
+++ b/docs/tutorials/integrations/mcp-notion.mdx
@@ -255,7 +255,7 @@ By default, users must toggle the tool **ON** in the chat menu. You can configur
 4.  Check the box for **Notion**.
 5.  Click **Save & Update**.
 
-## Building a Specialized Notion Agent
+## Building a Specialized Notion Agent (Optional)
 
 For the most reliable experience, we recommend creating a dedicated "Notion Assistant" model. This allows you to provide a specialized **System Prompt**, a helpful **Knowledge Base**, and quick-start **Prompt Suggestions** that teaches the model how to navigate Notion's structure.
 
