--- a/docs/getting-started/env-configuration.mdx
+++ b/docs/getting-started/env-configuration.mdx
@@ -4567,6 +4567,13 @@ If `OAUTH_PICTURE_CLAIM` is set to `''` (empty string), then the OAuth picture c
 - Description: Enables or disables the visibility of the Notes feature to users.
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
+#### `USER_PERMISSIONS_FEATURES_CHANNELS`
+
+- Type: `str`
+- Default: `True`
+- Description: Enables or disables the ability for users to create their own group channels.
+- Persistence: This environment variable is a `PersistentConfig` variable.
+
 #### `USER_PERMISSIONS_FEATURES_API_KEYS`
 
 - Type: `bool`
